[build-system]
requires = [
  "setuptools >= 40.9.0",
  "beautifulsoup4 >= 4.10.0",
  "requests >= 2.20.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "is_insta_name_free"
version = "0.0.1"
authors = [
  { name="Dmitrii Galantsev" },
]
description = "Check whether a name is available on instagram"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dmitrii-galantsev/is_insta_name_free"
